# upnpd

./: .gitignore  Makefile.am  README  configure.ac  install  upnpd  upnpd.deb.in  upnpd.spec  upnpd.spec.in
etc/: upnpd.conf.xml
etc/devices.d/: dlna.conf.xml
etc/services.d/: dlna.conf.xml
upnpd/: upnpd.conf.xml
upnpd/devices.d/: dlna.conf.xml  igd.conf.xml  wfa.conf.xml
upnpd/services.d/: dlna.conf.xml  igd.conf.xml  wfa.conf.xml
www/cgi-bin/: .htaccess  ContentDirectory.pl  DLNA_GetDeviceInfo.pl  DLNA_GetDevices.pl  DLNA_browse.pl
www/htdocs/: .htaccess  index.html
www/htdocs/upnp/dlna/: ConnectionManager.xml  ContentDirectory.xml  MediaRenderer.xml  MediaServer.xml
www/htdocs/upnp/igd/: InternetGatewayDevice.xml
www/htdocs/upnp/wfa/: WFADevice.xml  WFAWLANConfig.xml
